<resources>
    <string name="app_name">Hotel CVC</string>
    <string name="retry">Retry</string>
    <string name="hotel_error">An error occurred while loading the hotels</string>
    <string name="hotel_detail_error">An error occurred while loading the hotel details</string>
    <string name="title_hotel">Nome do Hotel</string>
    <string name="title_cidade">Nome da Cidade</string>
    <string name="price_room_adulto">R$ 999,99</string>
    <string name="price_room_crianca">R$ 888,88</string>
    <string name="button_detalhe">Mais informações</string>
    <string name="title_tipo">Tipo Quarto</string>
    <string name="unknown_error">unknown_error</string>
    <string name="loading">Carregando...</string>
    <string name="title_details_page">Detalhes do Hotel</string>
    <string name="title_room_adulto">Adulto</string>
    <string name="title_room_crianca">Criança</string>
</resources>
