<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="br.com.rafaeldias.hotel.ui.hotel.HotelViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:text="@string/title_hotel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:mutableText="@{viewModel.getHotelTitle()}"
            android:id="@+id/tvListaHotel"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="@dimen/title_font_size"
            android:textColor="@color/colorTextIcons"
            android:textStyle="bold"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btListaDetalhe"/>

        <TextView
            android:text="@string/title_cidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvListaCidade"
            app:mutableText="@{viewModel.getHotelCidade()}"
            app:layout_constraintTop_toBottomOf="@+id/tvListaHotel"
            android:textSize="@dimen/subtitle_font_size"
            android:textColor="@color/colorLightPrimary"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btListaDetalhe"/>

        <TextView
            android:text="@string/price_room_adulto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvValorQuartoAdulto"
            android:textStyle="bold"
            app:mutableText="@{viewModel.getHotelMenorPrecoQuartoAdulto()}"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/price_font_size"
            app:layout_constraintEnd_toEndOf="@+id/tvListaTipo"
            app:layout_constraintStart_toStartOf="@+id/tvListaTipo"
            app:layout_constraintBottom_toTopOf="@+id/tvListaTipo"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:text="@string/button_detalhe"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:id="@+id/btListaDetalhe"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/button_font_size"
            app:layout_constraintTop_toBottomOf="@+id/tvListaTipo"
            android:layout_marginTop="8dp"/>

        <TextView
            android:text="@string/title_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvListaTipo"
            app:mutableText="@{viewModel.getHotelCategoriaQuarto()}"
            android:textColor="@color/colorLightPrimary"
            app:layout_constraintTop_toBottomOf="@+id/tvListaHotel"
            android:textSize="@dimen/type_font_size"
            app:layout_constraintStart_toStartOf="@+id/btListaDetalhe"
            app:layout_constraintEnd_toEndOf="@+id/btListaDetalhe"/>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:id="@+id/vLinha"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:background="@color/colorSecondaryText"
            app:layout_constraintTop_toBottomOf="@+id/btListaDetalhe"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</layout>